@@ -24,6 +24,7 @@ Dist::Zilla::Plugin::OurPkgVersion          = 0
 Dist::Zilla::Plugin::PodWeaver              = 0
 Dist::Zilla::Plugin::ReadmeFromPod          = 0
 Dist::Zilla::Plugin::ReadmeMarkdownFromPod  = 0
+Dist::Zilla::Plugin::SchwartzRatio          = 0
 Dist::Zilla::Plugin::SurgicalPodWeaver      = 0.0015 ; to avoid circular dependencies
 Dist::Zilla::Plugin::Twitter                = 0.010 ;  Support for choosing WWW::Shorten::$site via WWW::Shorten::Simple
 Dist::Zilla::PluginBundle::TestingMania     = 0 ; No version prereq for easier testing
